# multimodal-vector-search-engine

./: .gitignore  README.md  benchmark.py  docker-compose.yml  vector_service_pb2.py  vector_service_pb2_grpc.py
core-engine/: CMakeLists.txt
core-engine/include/: VectorStorage.hpp  hnsw_index.hpp
core-engine/src/: hnsw_index.cpp  main.cpp
ingestion-service/: pom.xml
ingestion-service/src/main/java/com/search/engine/: IngestionServiceApplication.java
ingestion-service/src/main/java/com/search/engine/config/: KafkaConsumerConfig.java
ingestion-service/src/main/java/com/search/engine/pipeline/: VectorIngestionConsumer.java  VectorIngestionController.java
ingestion-service/src/main/resources/: application.yml
k8s/: core-engine-deployment.yaml  ingestion-service-deployment.yaml
protos/: vector_service.proto
terraform/: main.tf
terraform/modules/ecs/: main.tf
terraform/modules/elasticache/: main.tf
terraform/modules/lambda/: main.tf
terraform/modules/vpc/: main.tf
web-gateway/: package-lock.json  package.json  server.ts
web-gateway/visual-ui/: package-lock.json  package.json
web-gateway/visual-ui/app/: page.tsx
